apps/gitlab/gitlab/networkpolicies/egress-gitlab-create-buckets.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-create-buckets
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: minio
      component: create-buckets
      release: gitlab
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: minio
            component: app
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
