apps/gitlab/gitlab/networkpolicies/egress-gitlab-migrations.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-migrations
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: migrations
      release: gitlab
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: gitlab-postgresql
            namespace: gitlab
        - k8sService:
            serviceName: gitlab-redis-master
            namespace: gitlab
        - k8sService:
            serviceName: gitlab-minio-svc
            namespace: gitlab
