apps/gitlab/gitlab/networkpolicies/egress-gitlab-shared-secrets-job.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-shared-secrets-job
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      job-name: gitlab-shared-secrets
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube api
