apps/gitlab/gitlab/networkpolicies/egress-gitlab-upgrade-check.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-upgrade-check
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: gitlab
      job-name: gitlab-gitlab-upgrade-check
      release: gitlab
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab
            app.kubernetes.io/name: postgresql
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
