apps/gitlab/gitlab/networkpolicies/gitlab-postgres.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-postresql
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: postresql
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5432"
    - fromEndpoints:
        - matchLabels:
            app: sidekiq
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5432"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "35736"
            - port: "56072"
            - port: "57946"
            - port: "57940"
            - port: "57942"
            - port: "57944"
            - port: "51540"
            - port: "51558"
            - port: "41322"
            - port: "41326"
            - port: "57938"
            - port: "39508"
            - port: "43312"
            - port: "39416"
            - port: "43132"
            - port: "39514"
