apps/gitlab/gitlab/networkpolicies/gitlab-postgresql.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-postgresql
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: postgresql
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: migrations
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: gitlab
            job-name: gitlab-gitlab-upgrade-check
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: sidekiq
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "34358"
              protocol: TCP
            - port: "43720"
              protocol: TCP
            - port: "56404"
              protocol: TCP
