apps/gitlab/gitlab/networkpolicies/gitlab-registry.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: registry
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
            - port: "5001"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: gitlab-minio-svc
            namespace: gitlab
