apps/gitlab/gitlab/networkpolicies/gitlab-shell.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-shell
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: gitlab-shell
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "2222"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: gitlab-webservice-default
            namespace: gitlab
        - k8sService:
            serviceName: gitlab-gitaly
            namespace: gitlab
