apps/gitlab/gitlab/networkpolicies/gitlab-webservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-webservice
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: webservice
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8181"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            job: cleanup-gitlab-runner
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: gitlab-shell
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: gitaly
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "8443" # OIDC
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: minio
            component: app
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab
            app.kubernetes.io/name: postgresql
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab
            app.kubernetes.io/name: redis
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: registry
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
