apps/gitlab/gitlab/networkpolicies/gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      release: gitlab
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toServices:
        - k8sService:
            serviceName: traefik
            namespace: traefik
      toPorts:
        - ports:
            - port: "8443"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "587"
