apps/gitlab/gitlab/networkpolicies/ingress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-ingress-traefik
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      release: gitlab
      app: webservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8080"
        - ports:
            - port: "8181"

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: registry-ingress-traefik
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      release: gitlab
      app: registry
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "5000"

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-traefik
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      release: gitlab
      app: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "9000"
    - fromEndpoints:
        - matchLabels:
            job: gitlab-backup-mirror
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-shell-ingress-traefik
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      release: gitlab
      app: gitlab-shell
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "2222"
