apps/gitlab/gitlab/networkpolicies/nginx-egress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-gitlab
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: gitlab-gitlab-shell
            namespace: gitlab
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: gitlab-minio-svc
            namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: gitlab-registry
            namespace: gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: gitlab-webservice-default
            namespace: gitlab
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8181"
              protocol: TCP
