apps/gitlab/gitlab/networkpolicies/prometheus-egress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-gitlab
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app: sidekiq
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: webservice
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
        - matchLabels:
            app: gitaly
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "80"
