apps/gitlab/gitlab/networkpolicies/traefik-egress-gitlab.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-gitlab
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: gitlab-shell
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "2222"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: minio
            component: app
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: registry
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            io.kubernetes.pod.namespace: gitlab
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8181"
              protocol: TCP
